--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
 ENCRYPTION_KEY=tobemodified
+CLOUDINARY_NAME=tobemodified
+CLOUDINARY_KEY=tobemodified
+CLOUDINARY_SECRET=tobemodified
